[gd_scene load_steps=2 format=3 uid="uid://b58muftj2st80"]

[ext_resource type="Script" path="res://src/scenes/huneX.gd" id="1_lcfhx"]

[node name="HuneXExtract" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_lcfhx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -15.5
offset_right = 113.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="LoadExe" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Load EXE
"

[node name="LoadCdBinFile" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Extract CD.BIN
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = 44.0
offset_right = 160.5
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2

[node name="DecompressFiles" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Decompress Compressed Files"

[node name="ConvertTGA" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Convert Images to PNG Files"

[node name="DebugOutput" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Output Decompressed Images (Debug)"

[node name="LoadBIN" type="FileDialog" parent="."]
title = "Open File(s)"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("CD.BIN")
use_native_dialog = true

[node name="LoadExe" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("SLPM_657.17, SLPM_655.85")
use_native_dialog = true

[node name="LoadFOLDER" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[connection signal="pressed" from="HBoxContainer/LoadExe" to="." method="_on_load_exe_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadCdBinFile" to="." method="_on_load_cd_bin_file_pressed"]
[connection signal="pressed" from="VBoxContainer/DecompressFiles" to="." method="_on_decompress_files_pressed"]
[connection signal="pressed" from="VBoxContainer/ConvertTGA" to="." method="_on_convert_tga_pressed"]
[connection signal="pressed" from="VBoxContainer/DebugOutput" to="." method="_on_debug_output_pressed"]
[connection signal="files_selected" from="LoadBIN" to="." method="_on_load_bin_files_selected"]
[connection signal="file_selected" from="LoadExe" to="." method="_on_load_exe_file_selected"]
[connection signal="dir_selected" from="LoadFOLDER" to="." method="_on_load_folder_dir_selected"]
